[tool.doks]
auto = true

[tool.poetry]
name = "def-main"
version = "0.11.1"
description = "🗣 A decorator for main 🗣"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
xmod = "^1.3.2"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
doks = "^1.0.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
