[project]
name = "def-main"
version = "0.11.1"
description = "🗣 A decorator for main 🗣"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["xmod>=1.3.2,<2"]

[tool.doks]
auto = true

[dependency-groups]
dev = [
    "coverage>=6.5.0,<7",
    "doks>=1.0.1,<2",
    "flake8>=5.0.4,<6",
    "pytest>=7.2.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
